--- a/_Imports.razor
+++ b/_Imports.razor
@@ -5,3 +5,6 @@
 @using Microsoft.JSInterop
 @using blazor_app
 @using blazor_app.Shared
+@using Blazored
+@using Blazored.Modal
+@using Blazored.Modal.Services
