--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,8 +1,9 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="sidebar">
+<BlazoredModal />
+@* <div class="sidebar">
     <NavMenu />
-</div>
+</div> *@
 
 <div class="main">
     <div class="top-row px-4">
