--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -38,7 +38,7 @@ else
         </tbody>
     </table>
     <h3>Create New</h3>
-    <input type="button" class="btn btn-primary"  value="Edit" @onclick="(() => ShowDetailModal(0))" />
+    <input type="button" class="btn btn-primary"  value="Create" @onclick="(() => ShowDetailModal(0))" />
 
     
 }
